--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,12 @@
+@import './buttons.css';
+@import './components.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 [x-cloak] {
     display: none;
 }
+
