--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -15,5 +15,13 @@
   .btn-gradient-yellow {
     @apply text-white bg-gradient-to-r from-yellow-500 via-yellow-600 to-yellow-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-yellow-300 dark:focus:ring-yellow-800 shadow-lg shadow-yellow-500/50 dark:shadow-lg dark:shadow-yellow-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2;
   }
+/* botón púrpura */
+.btn-gradient-purple {
+  @apply text-white bg-gradient-to-r from-purple-500 via-purple-600 to-purple-700 hover:bg-gradient-to-br 
+    focus:ring-4 focus:outline-none focus:ring-purple-300 dark:focus:ring-purple-800 
+    shadow-lg shadow-purple-500/50 dark:shadow-lg dark:shadow-purple-800/80 
+    font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2;
+}
+
 }
 
