--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -1,5 +1,10 @@
 
 @layer components {
+
+  .btn {
+  @apply transition-opacity duration-200 ease-in-out disabled:opacity-50 ;
+}
+
   .btn-gradient-blue {
     @apply text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2;
   }
@@ -22,6 +27,17 @@
     shadow-lg shadow-purple-500/50 dark:shadow-lg dark:shadow-purple-800/80 
     font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2;
 }
+/* botón gris */
+.btn-gradient-gray {
+  @apply text-white bg-gradient-to-r from-gray-500 via-gray-600 to-gray-700 hover:bg-gradient-to-br 
+    focus:ring-4 focus:outline-none focus:ring-gray-300 dark:focus:ring-gray-800 
+    shadow-lg shadow-gray-500/50 dark:shadow-lg dark:shadow-gray-800/80 
+    font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 ;
+}
+
+
+
+
 
 }
 
