--- a/resources/css/buttons.css
+++ b/resources/css/buttons.css
@@ -34,6 +34,15 @@
     shadow-lg shadow-gray-500/50 dark:shadow-lg dark:shadow-gray-800/80 
     font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 ;
 }
+.btn-login-f {
+  @apply text-white 
+    bg-gradient-to-r from-indigo-500 via-indigo-600 to-indigo-700 
+    hover:from-indigo-600 hover:via-indigo-700 hover:to-indigo-800
+    focus:ring-4 focus:outline-none focus:ring-indigo-300 
+    dark:focus:ring-indigo-800 
+    font-semibold rounded-xl text-sm px-6 py-2.5 text-center shadow-lg transition-all duration-300 ease-in-out;
+}
+
 
 
 
